# profilerInformation

./: .gitignore  .nfs000000001acf149e000000d1  .tool.cpp.swp  CMakeLists.txt  README.md  Summary.md  a.out  abstract.md  build.sh  foo.cpp  foo.x  hello.cpp  rocprof-sdk.md  run_ldmsd.sh  tool-ldms.cpp  tool.cpp  tools.md
Codes/: tool-ldms.cpp
ldms_in_a_can/: aggregator.conf  sampler.conf
